Styles: Fix delete button on smaller screens

--- a/static/mobile.css
+++ b/static/mobile.css
@@ -31,6 +31,10 @@ aside {
   width: 85%;
 }
 
+.content-body {
+  padding: 0rem;
+}
+
 .content-body p {
   padding: 1rem;
 }
